feat: add ability to define base url and main email

--- a/docker-compose/withPostgres/.env
+++ b/docker-compose/withPostgres/.env
@@ -1,6 +1,13 @@
-POSTGRES_USER=changeUser
-POSTGRES_PASSWORD=changePassword
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
 POSTGRES_DB=n8n
 
-POSTGRES_NON_ROOT_USER=changeUser
-POSTGRES_NON_ROOT_PASSWORD=changePassword
+POSTGRES_NON_ROOT_USER=daniel
+POSTGRES_NON_ROOT_PASSWORD=daniel
+
+DOMAIN_NAME=automations.danielsaisani.com
+SSL_EMAIL=danielsaisani@gmail.com
+N8N_HOST=automations.danielsaisani.com
+N8N_PORT=5678
+N8N_PROTOCOL=https
+WEBHOOK_URL=https://automations.danielsaisani.com/
